--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "express": "^4.16.4",
+    "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
+    "jspdf": "^1.5.3",
     "nuxt": "^2.0.0",
     "vuex-persistedstate": "^3.0.1"
   },
