--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.4.11",
     "express": "^4.16.4",
     "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "jsbarcode": "^3.11.0",
